# eval

./: .gitignore  README.md  build_and_run  bytecode.md  clean  cloco.md  close.ml  constants.md  eval.ml  loc.ml  main.ml  oSet.ml  oSet.mli  parser.ml  pretty.ml  result.ml  scopecheck.ml  syntax.ml  tMVar.ml  typecheck.ml  unify.ml  util.ml
eval/: .gitignore  Makefile  basicInstruction.ml  basicSyntax.ml  build_and_run  bytecode.ml  close.ml  compile.ml  compilerCommon.ml  constant.ml  dune-project  eval.ml  eval.opam  heap.ml  interpret.ml  lincode.ml  link.ml  loc.ml  lower.ml  main.ml  oSet.ml  parser.ml  pretty.ml  prettyBasicInstruction.ml  prettyBytecode.ml  prettyClosed.ml  prettyCommon.ml  prettyInternal.ml  prettyLincode.ml  prettyLow.ml  programInfo.ml  runtimeInfo.ml  scope.ml  scopecheck.ml  synclo.ml  synext.ml  synint.ml  synlow.ml  syntax.ml  test  (+4 more)
eval/lib/: bytecode.ml  close.ml  compile.ml  constant.ml  debug.ml  dlist.ml  dune  eval.ml  heap.ml  interpret.ml  lincode.ml  link.ml  loc.ml  lower.ml  oSet.mli  parser.ml  pretty.ml  prettyBytecode.ml  prettyClosed.ml  prettyCommon.ml  prettyInternal.ml  prettyLincode.ml  prettyLow.ml  programInfo.ml  runtimeInfo.ml  scope.ml  scopecheck.ml  synext.ml  synint.ml  synlow.ml  syntax.ml  tMVar.ml  typecheck.ml  unify.ml  util.ml
eval/test/: dune
examples/: _deep_matching.ev  closure.ev  eta-expansion.ev  fib.ev  higher-order.ev  list.ev  nary.ev  nat.ev  prim.ev  rec-non-fun.ev  rec_closure.ev  return_function.ev  simple.ev  ski.ev
